--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+frontend/build
 
 # Symbolication related
 app.*.symbols
@@ -43,3 +44,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# mongo db
+mongo-db/journal
+mongo-db/diagnostic.data
