fix docker for streamlit

--- a/streamlit_frontend/Dockerfile
+++ b/streamlit_frontend/Dockerfile
@@ -3,6 +3,14 @@ FROM python:3.9.18
 
 WORKDIR /app
 
+# Add the GDAL library
+RUN apt-get update && apt-get install -y libgdal-dev && rm -rf /var/lib/apt/lists/*
+
+# Set Gedal environment variables
+ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
+ENV C_INCLUDE_PATH=/usr/include/gdal
+
+
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
